fixed on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1822,6 +1822,7 @@ main {
 }
 .shop-single-active-filter-values {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 .shop-single-active-filter-value {
